--- a/man/man1/slice2py.1
+++ b/man/man1/slice2py.1
@@ -93,6 +93,16 @@ Generate code for all Slice definitions, including those from included files.
 .br
 Use PREFIX as the prefix for generated file names.
 
+.TP
+.BR \-\-no-package\fR
+.br
+Do not generate Python package hierarchy.
+
+.TP
+.BR \-\-build-package\fR
+.br
+Only generate Python package hierarchy.
+
 .SH SEE ALSO
 
 .BR slice2cpp (1),
