--- a/man/man1/ice2slice.1
+++ b/man/man1/ice2slice.1
@@ -1,82 +1,80 @@
 .TH ice2slice 1
 
 .SH NAME
-
 ice2slice - The Ice to Slice compiler.
 
 .SH SYNOPSIS
-
-ice2slice [options] [files]
+.B ice2slice
+.RI [ options ] [ files ]
 
 .SH DESCRIPTION
+The ice2slice compiler transforms Slice definitions in .ice files into
+Slice definitions in .slice files.
 
-ice2slice compiler transforms Slice definitions in (.ice) files used by Ice to Slice definitions in (.slice) files used
-by IceRPC. The macro __ICE2SLICE__ is defined during this compilation.
-
-Full documentation for ice2slice is available online at:
-.br
-https://doc.zeroc.com/ice/3.7/language-mappings/javascript-mapping/client-side-slice-to-javascript-mapping/ice2slice-command-line-options
+\&.ice files are understood by the Slice compilers provided by Ice, while
+\&.slice files are understood by the new Slice compiler developed as part
+of IceRPC.
 
 .SH OPTIONS
+.TP
+.BR \-h ", " \-\-help
+Displays the help message.
 
 .TP
-.BR \-h ", " \-\-help\fR
-.br
-Displays help message.
-
-.TP
-.BR \-v ", " \-\-version\fR
+.BR \-v ", " \-\-version
 Displays the compiler version.
 
 .TP
-.BR \-DNAME\fR
-.br
-Defines the preprocessor symbol NAME.
+.BR \-D NAME
+Defines the preprocessor symbol
+.I NAME.
 
 .TP
-.BR \-DNAME=DEF\fR
-.br
-Defines the preprocessor symbol NAME with the value DEF.
+.BR \-D NAME = DEF
+Defines the preprocessor symbol
+.I NAME
+with the value
+.I DEF.
 
 .TP
-.BR \-UNAME\fR
-.br
-Undefines the preprocessor symbol NAME.
+.BR \-U NAME
+Undefines the preprocessor symbol
+.I NAME.
 
 .TP
-.BR \-IDIR\fR
-.br
-Add the directory DIR to the search path for #include directives.
+.BR \-I DIR
+Adds the directory
+.I DIR
+to the search path for
+.B #include
+directives.
 
 .TP
-.BR \-E\fR
-.br
-Print the preprocessor output on stdout.
+.BR \-E
+Prints the preprocessor output to
+.BR stdout.
 
 .TP
-.BR \-\-output-dir " " DIR\fR
-.br
-Place the generated files into directory DIR.
+.BR \-\-output-dir " " DIR
+Places the generated files into the directory
+.I DIR.
 
 .TP
-.BR \-d ", " \-\-debug\fR
-.br
-Print debug information showing the operation of the Slice parser.
+.BR \-d ", " \-\-debug
+Prints debug information showing the operation of the Slice parser.
 
 .TP
-.BR \-\-validate\fR
-.br
-Checks the provided command-line options for correctness, and does not
+.BR \-\-validate
+Checks the provided command-line options for correctness and does not
 generate any code.
 
 .SH SEE ALSO
-
 .BR slice2cpp (1),
 .BR slice2cs (1),
 .BR slice2java (1),
-.BR ice2slice (1),
+.BR slice2js (1),
 .BR slice2matlab (1),
 .BR slice2php (1),
 .BR slice2py (1),
 .BR slice2rb (1),
-.BR slice2swift(1)
+.BR slice2swift (1)
