Add workflow to build and publish nightly releases

--- a/packaging/dpkg/debian/changelog
+++ b/packaging/dpkg/debian/changelog
@@ -1,4 +1,4 @@
-zeroc-ice (3.8.0~alpha0-1) unstable; urgency=medium
+zeroc-ice (3.8.0~alpha0-1) UNRELEASED; urgency=medium
 
   * Ice 3.8 alpha0 pre-release
 
