Remove --depend option from slice2java and slice2matlab

--- a/man/man1/slice2java.1
+++ b/man/man1/slice2java.1
@@ -64,13 +64,6 @@ Place the generated files into directory DIR.
 Print debug information showing the operation of the Slice parser.
 
 .TP
-.BR \-\-depend\fR
-.br
-Print dependency information to standard output by default, or to the
-file specified by the --depend-file option. No code is generated when
-this option is specified.
-
-.TP
 .BR \-\-depend\-xml\fR
 .br
 Print dependency information in XML format to standard output by default,
@@ -80,8 +73,7 @@ when this option is specified.
 .TP
 .BR \-\-depend\-file " " FILE\fR
 .br
-Directs dependency information to the specified file. The output
-format depends on whether --depend or --depend-xml is also specified.
+Directs dependency information to the specified file.
 
 .TP
 .BR \-\-validate\fR
