Fix review comments

--- a/man/man1/slice2matlab.1
+++ b/man/man1/slice2matlab.1
@@ -73,7 +73,8 @@ when this option is specified.
 .TP
 .BR \-\-depend\-file " " FILE\fR
 .br
-Directs dependency information to the specified file.
+Directs dependency information to the specified file. Has no effect unless
+--depend-xml is also specified.
 
 .TP
 .BR \-\-validate\fR
