--- a/packaging/dpkg/debian/README
+++ b/packaging/dpkg/debian/README
@@ -1,57 +1,11 @@
-======================================================================
-The Internet Communications Engine
-======================================================================
+# The Ice Framework
 
-Ice is a comprehensive RPC framework that helps you build distributed
-applications with minimal effort using familiar object-oriented idioms.
-Ice handles all interactions with low-level network programming
-interfaces so that you can focus your efforts on your application logic.
-When using Ice, there is no need to worry about details such as opening
-network connections, serializing and deserializing data for network
-transmission, or retrying failed connection attempts (just to name a
-few things).
+Ice helps you build networked applications with minimal effort. By taking care of all interactions with low-level
+network programming interfaces, Ice allows you to focus your efforts on your application logic. You don't need to
+worry about details such as opening network connections, encoding and decoding data for network transmission, or
+retrying failed connection attempts (to name just a few of dozens of such low-level details).
 
-Feature highlights:
-
-- Efficient, high-performance binary protocol
-- Supports a wide range of programming languages and platforms
-- Easy to use and type-safe API, with your own interfaces and types
-  defined in a programming language neutral IDL, Slice
-- Supports secure, encrypted communications by taking advantage of
-  your platform's native SSL/TLS stack
-- Familiar object-oriented programming model, with the ability to
-  transmit proxies (references to remote objects) to remote applications
-- Supports synchronous and asynchronous calls, for both client-side
-  invocations and server-side dispatches
-- Automatic discovery of remote objects through UDP multicast
-- Comes with a number of optional services:
-   - IceGrid, the nerve-center of any large-scale application, with
-     support for server deployment, replication, monitoring,
-     load-balancing and more
-   - IceStorm, a lightweight topic-based pub-sub service
-   - Freeze, an embedded, transactional database for Ice datatypes
-   - Glacier2, a sysadmin-friendly solution for routing Ice
-     communications through firewalls
-   - IcePatch2, an efficient software distribution and patching service
-
-Getting Started with Ice on Linux
----------------------------------
-
-Please visit the 'Using the Linux Binary Distributions' section in the
-Ice 3.7.10 release notes:
-
-https://doc.zeroc.com/rel/ice-releases/ice-3-7/ice-3-7-10-release-notes
-
-Documentation
--------------
-
-The full documentation for Ice is available online:
-
-https://doc.zeroc.com/ice/3.7/
-
-Source Code
-------------
-
-The source code for Ice 3.7.10 is on GitHub:
-
-https://github.com/zeroc-ice/ice/releases/tag/v3.7.10
+- Downloads https://zeroc.com/ice/downloads/3.8
+- Source https://github.com/zeroc-ice/ice/tree/3.8
+- Documentation https://doc.zeroc.com/ice/3.8
+- Examples https://github.com/zeroc-ice/ice-demos/tree/3.8
