--- a/packaging/rpm/README
+++ b/packaging/rpm/README
@@ -1,54 +1,33 @@
-======================================================================
-Ice - Comprehensive RPC Framework
-======================================================================
+ZeroC Ice RPM Distribution
+==========================
 
-Ice helps you network your software with minimal effort. By taking care
-of all interactions with low-level network programming interfaces, Ice
-allows you to focus your efforts on your application logic. When using
-Ice, there is no need to worry about details such as opening network
-connections, serializing and deserializing data for network transmission,
-or retrying failed connection attempts (to name just a few of dozens of
-such low-level details).
+The ZeroC Ice RPM distribution includes the following packages.
 
-Feature highlights:
+Currently, the distribution supports RHEL 10, RHEL 9, and Amazon Linux 2023, for both x86_64 and aarch64 architectures.
 
-- Efficient, high-performance binary protocol
-- Supports a wide range of programming languages and platforms
-- Easy to use and type-safe API, with your own interfaces and types
-  defined in a programming language neutral IDL, Slice
-- Supports secure, encrypted communications by taking advantage of
-  your platform's native SSL/TLS stack
-- Familiar object-oriented programming model, with the ability to
-  transmit proxies (references to remote objects) to remote applications
-- Supports synchronous and asynchronous calls, for both client-side
-  invocations and server-side dispatches
-- Automatic discovery of remote objects through UDP multicast
-- Comes with a number of optional services:
-   - IceGrid, a DNS-like service for Ice objects, with support for server
-     deployment, replication, monitoring, load-balancing and more
-   - IceStorm, a lightweight topic-based pub-sub service
-   - Glacier2, a sysadmin-friendly solution for routing Ice
-     communications through firewalls
-   - IcePatch2, an efficient software distribution and patching service
+RPM Package             Description
+----------------------  ---------------------------------------------------------------
+dsnode                  DataStorm server
+glacier2                Glacier2 service
+ice-compilers           Slice compilers, such as slice2cpp, slice2java, and slice2py
+ice-slice               Slice definition files
+ice-utils               Utilities for administering an Ice installation
+icebox                  IceBox server for C++
+icebridge               IceBridge service
+icegrid                 IceGrid service
+icegridgui              IceGrid GUI application
+libice-c++-devel        C++ headers and symlinks to Ice C++ runtime libraries
+libice3.8-c++           Ice C++ runtime libraries
+libicestorm3.8          IceStorm service
+php-ice                 PHP extension and runtime files [1]
+php8.4-ice              PHP extension and runtime files [2]
+python3-ice             Python 3 extension and runtime files
 
-Getting Started with Ice on Linux
----------------------------------
+[1] Available on RHEL 9 and RHEL 10.
+[2] Available on Amazon Linux 2023 only.
 
-Please visit the 'Using the Linux Binary Distributions' section in the
-Ice 3.7.10 release notes:
+For more information, visit:
 
-https://doc.zeroc.com/rel/ice-releases/ice-3-7/ice-3-7-10-release-notes
-
-Documentation
--------------
-
-The full documentation for Ice is available online:
-
-https://doc.zeroc.com/ice/3.7
-
-Source Code
-------------
-
-The source code for Ice 3.7.10 is on GitHub:
-
-https://github.com/zeroc-ice/ice/releases/tag/v3.7.10
+- ZeroC website: https://zeroc.com
+- Ice GitHub repository: https://github.com/zeroc-ice/ice
+- Ice Sample Programs: https://github.com/zeroc-ice/ice-demos
