--- a/packaging/deb/debian/README
+++ b/packaging/deb/debian/README
@@ -16,7 +16,7 @@ zeroc-icebox             IceBox server for C++
 zeroc-icebridge          IceBridge service
 zeroc-icegrid            IceGrid service
 libzeroc-ice-dev         C++ headers and symlinks to Ice C++ runtime libraries
-libzeroc-ice3.8-c++      Ice C++ runtime libraries
+libzeroc-ice3.8-c++      Ice for C++ runtime libraries (includes plug-ins, DataStorm and client libraries for Ice services)
 libzeroc-icestorm3.8     IceStorm service
 php-zeroc-ice            Ice for PHP
 python3-zeroc-ice        Ice for Python [1]
